--- a/src/creator.html
+++ b/src/creator.html
@@ -11,8 +11,8 @@
 		<script src="materia.creatorcore.js"></script>
 
 		<link rel="stylesheet" href="vendor/mathquill/mathquill.css">
-		<link rel="stylesheet" href="assets/stylesheets/creator.css">
-		<link rel="stylesheet" href="assets/stylesheets/player.css">
+		<link rel="stylesheet" href="creator.css">
+		<link rel="stylesheet" href="player.css">
 
 
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
@@ -23,8 +23,8 @@
 		<script type="text/javascript" src="vendor/jsxgraph/jsxgraphcore.js"></script>
 
 		<!-- MAIN PLAYER SCRIPT -->
-		<script src="./assets/js/creator.js"></script>
-		<script src="./assets/js/player-template-controller.js"></script>
+		<script src="./creator.js"></script>
+		<!-- <script src="./player-template-controller.js"></script> -->
 
 	</head>
 	<body ng-controller="CreatorController" ng-keyup="onKeyup($event)" ng-class="{'parse-error':parseError, 'bounds-error':boundsError, 'waiting':waiting}">
